[metadata]
name = qnlfab
version = attr: stockroom.__version__
description = QNL Fab - Notion integration
long_description = file: README.md

[options]
packages = find:
install_requires = 
    notion @ git+https://github.com/c0j0s/notion-py@4fabfb3151129bd2f3123e66341c79d533660db8
    python-barcode == 0.13.1
    python-slugify == 5.0.0 